<resources>
    <string name="app_name" translatable="false">Unkina SBT</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nacimento">Fecha Nacimento:</string>
    <string name="equipo">Equipo:</string>
    <string name="cancelar">Cancelar</string>
    <string name="ocupacion">Ocupación:</string>
    <string name="persona_activa">Persona Activa:</string>
    <string name="administrador">Administrador:</string>
    <string name="ultima_conexion">Última Conexión:</string>
    <string name="categoria">Categoria</string>
    <string name="nombre_equipo">Nombre Equipo</string>
    <string name="puntuacion_a_favor">Puntuación a favor:</string>
    <string name="puntuacion_en_contra">Puntuación en contra:</string>
    <string name="fecha">Fecha:</string>
    <string name="local">Local</string>
    <string name="horario">Horario:</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="nombre_de_filtrado">Nombre de filtrado</string>
    <string name="e_mail">E-mail</string>
    <string name="campo">Campo *</string>
    <string name="nombre2">Nombre *</string>
    <string name="categoria2">Categoria *</string>
    <string name="liga">Liga *</string>
    <string name="escudo">Escudo *</string>
    <string name="equipo_de_unkina">Equipo de Unkina</string>
    <string name="es_visible">Es visible</string>
    <string name="foto">Foto *</string>
    <string name="temporada">Temporada *</string>
    <string name="equipo2">Equipo *</string>
    <string name="dinero">Dinero</string>
    <string name="es_patrocinador">Es Patrocinador</string>
    <string name="esta_activo">Esta activo</string>
    <string name="idioma">Idioma</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="contrase_a_actual">Contraseña Actual</string>
    <string name="calendario">CALENDARIO</string>
    <string name="colaboradores">COLABORADORES</string>
    <string name="contacto">CONTACTO</string>
    <string name="e_mail2">E-mail*</string>
    <string name="asunto">Asunto*</string>
    <string name="mensaje">Mensaje*</string>
    <string name="enviar">ENVIAR</string>
    <string name="no_hay_imagenes">No hay imagenes</string>
    <string name="selecciona_una_opcion">Selecciona una opción</string>
    <string name="equipo_tecnico">EQUIPO TÉCNICO</string>
    <string name="jugadores">JUGADORES</string>
    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="modificaci_n">Modificación</string>
    <string name="jornada">Jornada</string>
    <string name="generar_fichero">Generar Fichero</string>
    <string name="normas_organizacion_partidos">Normas organización partidos</string>
    <string name="autorizacion_de_imagenes">Autorización de imágenes</string>
    <string name="nuevas_inscripciones">Nuevas inscripciones</string>
    <string name="alta_deporte_escolar">Alta deporte escolar</string>
    <string name="reglamento_escolar">Reglamento escolar</string>
    <string name="exencion_de_responsabilidades">Exención de responsabilidades</string>
    <string name="reglamento_de_regimen_interno">Reglamento de régimen interno</string>
    <string name="reglamento_vestuarios">Reglamento vestuarios</string>
    <string name="informacion">INFORMACION</string>
    <string name="necesitas">💡 NECESITARÁS: \n \n · Nombre \n · Apellidos \n · Foto \n · E-mail \n · Empadronamiento \n · Diploma deportivo</string>
    <string name="mensajito">Cuando tenga todo lo anterior, puede continuar con la inscripción.</string>
    <string name="siguiente">Siguiente</string>
    <string name="apellidos2">Apellidos *</string>
    <string name="fecha2">Fecha *</string>
    <string name="marcar_si_tiene_hermanos_apuntados">Marcar si tiene hermanos apuntados</string>
    <string name="email_del_usuario">Email del usuario *</string>
    <string name="dni">DNI *</string>
    <string name="empadronamiento">Empadronamiento *</string>
    <string name="diploma">Diploma *</string>
    <string name="certificado">Certificado </string>
    <string name="acceder">Acceder</string>
    <string name="constrasena">Constraseña</string>
    <string name="he_olvidado_mi_contrase_a">He olvidado mi contraseña</string>
    <string name="personal">PERSONAL</string>
    <string name="prueba">PRUEBA</string>
    <string name="nombre_jugador_a">Nombre Jugador/a*</string>
    <string name="fecha_de_nacimiento2">Fecha de Nacimiento*</string>
    <string name="numero_de_tel_fono">Número de Teléfono*</string>
    <string name="inicio">Inicio</string>
    <string name="equipos">Equipos</string>
    <string name="jugadores_as">Jugadores/as</string>
    <string name="fotos">Fotos</string>
    <string name="gestiones">Gestiones</string>
    <string name="gpartidos">GPartidos</string>
    <string name="gequipos">GEquipos</string>
    <string name="gcategorias">GCategorias</string>
    <string name="gpatrocinadores">GPatrocinadores</string>
    <string name="gligas">GLigas</string>
    <string name="gocupacioens">GOcupaciones</string>
    <string name="gpdfs">GPDFs</string>
    <string name="otros">Otros</string>
    <string name="galeria">Galería</string>
    <string name="patrocinadores">Patrocinadores</string>
    <string name="inscripciones">Inscripciones</string>
    <string name="inicar_sesion">Inicar Sesión</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="gestion_patrocinadores">Gestión de Patrocinadores</string>
    <string name="gestion_equipos">Gestión de Equipos</string>
    <string name="gestion_ligas">Gestion de Ligas</string>
    <string name="gestion_ocupaciones">Gestión de Ocupaciones</string>
    <string name="gestion_fotos">Gestión de Fotos</string>
    <string name="gestion_categorias">Gestión de Categorías</string>
    <string name="mensajito_email_primera_vez">Escribe el email con el que te registraste la primera vez</string>
    <string name="confirmacion_inscripcion">Datos enviado, se le confirmara por Email</string>
    <string name="datos_requeridos">Introduce todos los datos requeridos</string>
    <string name="escribe_numero_tlfn">Escribe un numero de teléfono</string>
    <string name="escribe_un_nombre">Escribe un nombre</string>
    <string name="elige_fecha">Elige una fecha de nacimiento</string>
    <string name="Escribe_un_email">Escribe un e-mail</string>
    <string name="Escribe_un_mensaje">Escribe un mensaje</string>
    <string name="Escribe_un_asunto">Escribe un asunto</string>

</resources>