<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PruebaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/textViewContacto"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/prueba"
            android:textSize="34sp"
            android:textStyle="bold"
            android:paddingBottom="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:hint="@string/e_mail2"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreLayout"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:hint="@string/nombre_jugador_a"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDate"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:hint="@string/fecha_de_nacimiento2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlfnLayout"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:hint="@string/numero_de_tel_fono"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tlfn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonEnviar"
            style="@style/AppButton"
            android:text="@string/enviar" />


    </LinearLayout>

</LinearLayout>