<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/foto"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/foto"
        app:cornerRadius="8dp"
        app:strokeColor="@color/C2"
        app:strokeWidth="3dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nombre2"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/equipoLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp">

        <AutoCompleteTextView
            android:id="@+id/equipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/equipo2"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
